--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 /*--------------------
       ALL DEBUG
 --------------------*/
@@ -98,22 +102,57 @@
       HEAD
 --------------------*/
 
-/* .bghead {
+.bghead {
+    background-color: #255EE9;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
 
-} */
+.heading-low {
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    padding-top: 20px;
+    color: white;
+}
+
+.low-headingparagraph {
+    display: flex;
+    align-self: center;
+    text-align: center;
+    color: white;
+    padding: 35px 35px 20px 35px;
+    margin-left: 10px;
+    margin-right: 10px;
+    line-height: 27px;
+}
+
+.pinkbox {
+    width: 700px;
+    min-height: 300px;
+}
+
+
 
 .container {
     display: flex;
     max-width: 1180px;
     align-items: center;
     min-height: 60px;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 
-.logo {
-
-    width: 25%;
+.dslogo {
+    display: flex;
     justify-content: flex-start;
+    align-items: center;
+    margin: 0;
+}
+
+
+.logo {
+    display: flex;
+    width: 25%;
 }
 
 .nav-content {
@@ -121,12 +160,24 @@
     width: 50%;
     justify-content: center;
     padding: 6px 8px;
+
 }
+
+li a {
+    display: flex;
+    color: white;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 15px;
+
+}
+
 
 .nav-list {
     display: flex;
     list-style: none;
     padding: 0px 10px;
+    
 }
 
 .main-nav ul {
@@ -147,23 +198,57 @@
     justify-content: flex-end;
 }
 
+.button-nav {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
+    padding: 10px 15px;
+    border-radius: 30px;
+    border: none;
+}
+
+.buttoncolor1{
+    background-color: white;
+    color: #23272a;
+}
+
+.button {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 10px;
+    padding: 14px 20px;
+    border-radius: 30px;
+    border: none;
+}
+
+.buttoncolor2{
+    background-color: #23272a;
+    color: white;
+}
+
+.sizetext-button{
+    font-size: 15px;
+}
+
+.buttonhead {
+    display: flex;
+    justify-content: center;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+
 .mrgelement {
     padding: 6px 8px;
 }
 
-.pinkbox {
-    display: flex;
-    width: 700px;
-    height: 300px;
-
-}
 
 .downhead {
-
     display: flex;
     min-height: 100px;
     padding: 40px;
-
+    background-image: url(./img/jumbo.png);
+    background-size: cover;
 }
 
 /*--------------------
@@ -272,7 +357,6 @@
     justify-content: space-between;
     max-width: 1180px;
     width: 100%;
-
     margin-top: 30px;
     min-height: 80px;
 
@@ -280,7 +364,6 @@
 
 .lowpageelement {
     display: flex;
-
     align-items: center;
     justify-content: center;
     height: 40px;
